--- a/pricing/templates/pricing/index.html
+++ b/pricing/templates/pricing/index.html
@@ -7,7 +7,28 @@ Pricing
 
 
 {% block body %}
-    
+    <div class="home-content">
+        <div class="header-box">
+            <p id="homeTextBig">Pricing Options?</p>
+        </div>
+
+        <div class="small-header-box">
+            <p id="homeTextSmall">Pick a model from the sidebar to get started...</p>
+        </div>
+        
+        <div class="info-box">
+            <p id="infoHead">Or learn about the pricing models below:</p>
+            <div class="infoRow">
+                <button class="infoButton" id="blackscholes">
+                    <label  for="blackscholes">Black Scholes Model</label>
+                </button>
+                <button class="infoButton" id="binomial">
+                    <label  for="binomial">Binomial Model</label>
+                </button>
+                
+            </div>
+        </div>
+    </div>
 {% endblock %}
 
 {% block script %}
