--- a/pricing/templates/pricing/bino.html
+++ b/pricing/templates/pricing/bino.html
@@ -10,34 +10,34 @@ Pricing | Binomial
         <div class="pageHeader">
             <h1>Binomial Model</h1>
         </div>
-
+        <!-- Creates Input Form -->
         <div class="formcontainer">
             <form class="calculation-form" id="calculation-form">
 
                 <div class="calclate-input-areas">
                     <div class="calculate-input-box">
                         <label for="stockPrice">Stock Price:</label>
-                        <input type="number" id="stockPrice" name="stockPrice" placeholder="" class="calculate-input-field" required>
+                        <input type="number" id="stockPrice" name="stockPrice" placeholder="" value="{{ stock }}" class="calculate-input-field" required>
                     </div>
 
                     <div class="calculate-input-box">
                         <label for="strikePrice">Strike Price:</label>
-                        <input type="number" id="strikePrice" name="strikePrice" placeholder="" class="calculate-input-field" required>
+                        <input type="number" id="strikePrice" name="strikePrice" placeholder="" value="{{ strike }}" class="calculate-input-field" required>
                     </div>
 
                     <div class="calculate-input-box">
                         <label for="expiration">Time to Expiry:</label>
-                        <input type="number" id="expiration" name="expiration" placeholder="days" class="calculate-input-field" required>
+                        <input type="number" id="expiration" name="expiration" placeholder="days" value="{{ expiry }}" class="calculate-input-field" required>
                     </div>
 
                     <div class="calculate-input-box">
                         <label for="rfr">Risk Free Rate:</label>
-                        <input type="number" id="rfr" name="rfr" placeholder="%" class="calculate-input-field" required>
+                        <input type="number" id="rfr" name="rfr" placeholder="%" value="{{ rfr }}" class="calculate-input-field" required>
                     </div>
 
                     <div class="calculate-input-box">
                         <label for="volatility">Volatility:</label>
-                        <input type="number" id="volatility" name="volatility" placeholder="%" class="calculate-input-field" required>
+                        <input type="number" id="volatility" name="volatility" placeholder="%" value="{{ vol }}" class="calculate-input-field" required>
                     </div>
 
                     <div class="calculate-input-box">
@@ -45,12 +45,16 @@ Pricing | Binomial
                         <input type="number" id="premium" name="premium" placeholder="steps" class="calculate-input-field" max="100" value="1"> 
                     </div>
                 </div>
+                <!-- Creates Input Buttons -->
                 <button class="calculate-btn" id="submit">
                     <label for="submit-btn">Calculate</label>
                 </button>
+                <button class="calculate-btn" id="save" type="button" disabled>
+                    <label for="save-btn">Save Calculation</label>
+                </button>
             </form>
         </div>
-
+        <!-- Hidden results and heatmaps -->
     <div id="resultconstainer">
         <div id="callValue">
             <p id="callValueText" class="valueText"></p>
@@ -80,16 +84,72 @@ Pricing | Binomial
     const inputs = form.querySelectorAll('input');
     const calculateButton = document.getElementById('submit');
     const results = document.getElementById('resultconstainer');
+    const savebutton = document.getElementById('save');
     const heatmaps = document.getElementById('heatmapcontainer');
     const formcontainer = document.querySelector('.formcontainer');
 
     calculateButton.addEventListener('click', calculateClicked);
 
+    savebutton.addEventListener('click', saveClicked);
+
+    //Getting CSRF
+    function getCookie(name) {
+    let cookieValue = null;
+    if (document.cookie && document.cookie !== '') {
+        const cookies = document.cookie.split(';');
+        for (let i = 0; i < cookies.length; i++) {
+            const cookie = cookies[i].trim();
+            // Does this cookie string begin with the name we want?
+            if (cookie.substring(0, name.length + 1) === (name + '=')) {
+                cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                break;
+            }
+        }
+    }
+    return cookieValue;
+}
+
+const csrftoken = getCookie('csrftoken');
+
+    // Saving Calculation
+    function saveClicked() {
+
+        const savedata = {
+            S : parseFloat(document.getElementById('stockPrice').value),
+            K : parseFloat(document.getElementById('strikePrice').value),
+            T : parseFloat(document.getElementById('expiration').value),
+            r : parseFloat(document.getElementById('rfr').value),
+            sigma : parseFloat(document.getElementById('volatility').value),
+            model : 'BINOMIAL',
+            csrfmiddlewaretoken : getCookie('csrftoken')
+        };
+
+        fetch('/savecalculation/', {
+            method : 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': savedata.csrfmiddlewaretoken
+            },
+            body: JSON.stringify(savedata)
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.status === 'success') {
+                alert('Calculation Saved Successfuly');
+            } else {
+                alert('Failed To Save Calculation')
+            }
+        })
+        .catch(error => console.error('Error:', error));
+    };
+
+    //Running Calculation
     function calculateClicked() {
         if (allInputsFilled()) {
             calculate();
             results.style.display = 'flex';
             heatmaps.style.display= 'flex';
+            savebutton.disabled = false;
             formcontainer.style.marginBottom = '5px';
             addInputListeners();
         }
@@ -99,6 +159,7 @@ Pricing | Binomial
         return Array.from(inputs).filter(input => input.required).every(input => input.value !== '');
     }
 
+    // Calls functions to calculate, generate heatmaps
     function calculate() {
         
         const S = parseFloat(document.getElementById('stockPrice').value);
@@ -122,7 +183,8 @@ Pricing | Binomial
         drawHeatmapPut(heatmapdataput, 'Put Value on Stock Price vs Volatility');
         
     }
-
+    
+    // Calculation for Binomial Call Options
     function binomialCall(S, K, T, r, sigma, steps) {
         
         const dt = T / steps;
@@ -149,6 +211,7 @@ Pricing | Binomial
         return Math.round(optionValues[0][0] * 100) / 100;
     }
 
+    // Calculation for Binomial Put Options
     function binomialPut(S, K, T, r, sigma, steps) {
         
         const dt = T / steps;
@@ -174,7 +237,7 @@ Pricing | Binomial
 
         return Math.round(optionValues[0][0] * 100) / 100;
     }
-
+    // Creates data for heatmaps call
     function generateHeatmapDataCall(S, K, T, r, sigma, steps) {
         
         const calldata = []
@@ -199,6 +262,7 @@ Pricing | Binomial
         return ret;
     }
 
+    // Creates data for heatmaps put
     function generateHeatmapDataPut(S, K, T, r, sigma, steps) {
         
         const putdata = []
@@ -223,6 +287,7 @@ Pricing | Binomial
         return ret;
     }
 
+    // Draws heatmap call as SVG
     function drawHeatmapCall(datas, title) {
         
         data = datas[0]
@@ -247,6 +312,7 @@ Pricing | Binomial
             .enter()
             .append("g");
 
+        //Creating cells
         cells.append("rect")
             .attr("x", (d, i) => x(i % data[0].length))
             .attr("y", (d, i) => y(Math.floor(i / data[0].length)))
@@ -254,6 +320,7 @@ Pricing | Binomial
             .attr("height", y.bandwidth())
             .style("fill", d => color(d));
 
+        //Adding value to cells
         cells.append("text")
             .attr("x", (d, i) => x(i % data[0].length) + x.bandwidth() / 2)
             .attr("y", (d, i) => y(Math.floor(i / data[0].length)) + y.bandwidth() / 2)
@@ -354,6 +421,7 @@ Pricing | Binomial
             .call(colorAxis);
     }
 
+    // Draws heatmap put as svg
     function drawHeatmapPut(datas, title) {
         
         data = datas[0]
@@ -378,6 +446,7 @@ Pricing | Binomial
             .enter()
             .append("g");
 
+        // creates cells
         cells.append("rect")
             .attr("x", (d, i) => x(i % data[0].length))
             .attr("y", (d, i) => y(Math.floor(i / data[0].length)))
@@ -385,6 +454,7 @@ Pricing | Binomial
             .attr("height", y.bandwidth())
             .style("fill", d => color(d));
 
+        // adds text to cells
         cells.append("text")
             .attr("x", (d, i) => x(i % data[0].length) + x.bandwidth() / 2)
             .attr("y", (d, i) => y(Math.floor(i / data[0].length)) + y.bandwidth() / 2)
