--- a/pricing/templates/pricing/login.html
+++ b/pricing/templates/pricing/login.html
@@ -14,7 +14,7 @@ Pricing | Login
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="input-box">
-            <input type="text" class="input-field" placeholder="Email" name="email" autocomplete="off" required>
+            <input type="text" class="input-field" placeholder="Username" name="email" autocomplete="off" required>
         </div>
         <div class="input-box">
             <input type="password" class="input-field" placeholder="Password" name="password" autocomplete="off" required>
@@ -29,6 +29,11 @@ Pricing | Login
         <p>Don't have an account? <a href="{% url 'register' %}">Sign Up</a></p>
     </div>
 
+    {% if message %}
+    <script type="text/javascript">
+        alert('{{message}}')
+    </script>
+    {% endif %}
 {% endblock %}
 
 {% block script %}
