--- a/pricing/templates/pricing/register.html
+++ b/pricing/templates/pricing/register.html
@@ -14,7 +14,7 @@ Pricing | Register
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="input-box">
-            <input type="text" class="input-field" placeholder="Email" name="email" autocomplete="off" required>
+            <input type="text" class="input-field" placeholder="Username" name="email" autocomplete="off" required>
         </div>
         <div class="input-box">
             <input type="password" class="input-field" placeholder="Password" name="password" autocomplete="off" required>
@@ -32,6 +32,12 @@ Pricing | Register
         <p>Have an account? <a href="{% url 'login' %}">Log In</a></p>
     </div>
 
+    {% if message %}
+    <script type="text/javascript">
+        alert('{{message}}')
+    </script>
+    {% endif %}
+    
 {% endblock %}
 
 {% block script %}
